--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,51 @@
 /* container */
 
 .container {
-    display: flex;
-    max-width: 1440px;
-    width: 100%;
+    width: min(100%, 1440px);
     margin: auto;
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+    padding: 52px 98px;
+    align-items: center;
+}
+
+.app-nav-ul {
+    display: flex;
+    column-gap: 50px;
+}
+
+.app-nav-li-link-active,
+.app-nav-li-link-notactive {
+    /* font-family: Ubuntu; */
+    font-size: 24px;
+    font-weight: 500;
+}
+
+.app-nav-li-link-notactive {
+    color: #758BFD;
+}
+
+.app-nav-li-link-active {
+    color: #27187F;
+}
+
+.app-search-container {
+    width: 222px;
+    height: 56px;
+    border-radius: 10px;
+    border: 3px solid #758BFD;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    padding: 12px 8px;
+}
+
+.app-search-container-icon {
+    font-size: 20px;
+    color: #758BFD;
 }
 
 /* header */
