--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,8 @@
     margin: auto;
 }
 
+/* header */
+
 header {
     display: flex;
     justify-content: space-between;
@@ -48,8 +50,49 @@ header {
     color: #758BFD;
 }
 
-/* header */
 
 /* section */
+
+.app-section {
+    background: #DDEAF8;
+    padding: 115px 98px;
+}
+
+.app-section-header {
+    color: #27187F;
+    /* font-family: Ubuntu; */
+    font-size: 32px;
+    font-weight: 700;
+    margin-bottom: 68px;
+}
+
+.app-section-cards-container {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    row-gap: 51px;
+
+}
+
+.app-section-card {
+    padding: 33px 30px;
+    border-radius: 10px;
+    background: #FFF;
+    width: 400px;
+}
+
+.app-section-card-img {
+    width: 100%;
+    height: 188px;
+    object-fit: cover;
+}
+
+.app-section-card-p {
+    color: #133B3A;
+    /* font-family: Ubuntu; */
+    font-size: 20px;
+    font-weight: 400;
+    margin-top: 33px;
+}
 
 /* footer */
