--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,6 @@ header {
 
 .app-nav-li-link-active,
 .app-nav-li-link-notactive {
-    /* font-family: Ubuntu; */
     font-size: 24px;
     font-weight: 500;
 }
@@ -60,7 +59,6 @@ header {
 
 .app-section-header {
     color: #27187F;
-    /* font-family: Ubuntu; */
     font-size: 32px;
     font-weight: 700;
     margin-bottom: 68px;
@@ -89,10 +87,40 @@ header {
 
 .app-section-card-p {
     color: #133B3A;
-    /* font-family: Ubuntu; */
     font-size: 20px;
     font-weight: 400;
     margin-top: 33px;
 }
 
 /* footer */
+
+footer {
+    padding: 75px 98px 105px 98px;
+    background: #758BFD;
+    display: flex;
+    justify-content: space-between;
+}
+
+.app-footer-social-text {
+    color: #FFF;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 17px;
+    letter-spacing: 0.2px;
+    margin-bottom: 20px;
+}
+
+.app-footer-social-icon {
+    color: #FFF;
+    font-size: 22px;
+}
+
+.app-footer-social-icon-mid {
+    margin: 0 24px;
+}
+
+.app-footer-pay {
+    border-radius: 8px;
+    width: 97px;
+    height: 55px;
+}
